--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -19,11 +19,22 @@
     -->
 
     <!-- FHIR Client JS Library -->
-    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+    <script src='https://rawgithub.com/smart-on-fhir/client-js/master/dist/fhir-client.js'></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <!-- Use to test on non-Cerner FHIR server
+    <script>
+      FHIR.oauth2.authorize({
+          "client": {
+              "client_id": "my_web_app",
+              "scope":  "patient/*.read launch/patient"
+          },
+          "server": "https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSIsImoiOiIxIn0/fhir"
+      });
+    </script>
+    -->
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
