--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -29,7 +29,7 @@
       FHIR.oauth2.authorize({
           "client": {
               "client_id": "my_web_app",
-              "scope":  "patient/*.read launch/patient"
+              "scope":  "patient/Patient.read patient/Observation.read launch online_access openid profile"
           },
           "server": "https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSIsImoiOiIxIn0/fhir"
       });
