--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -29,9 +29,9 @@
       FHIR.oauth2.authorize({
           "client": {
               "client_id": "my_web_app",
-              "scope":  "patient/Patient.read patient/Observation.read launch online_access openid profile"
+              "scope":  "patient/*.read launch/patient"
           },
-          "server": "https://launch.smarthealthit.org/v/r3/sim/eyJoIjoiMSIsImoiOiIxIn0/fhir"
+          "server": "https://r2.smarthealthit.org"
       });
     </script>
 
