--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -12,90 +12,53 @@
     -->
   </head>
   <body>
-    <div id='errors'>
-    </div>
-    <div id="loading" class="spinner">
-      <div class="bounce1"></div>
-      <div class="bounce2"></div>
-      <div class="bounce3"></div>
-    </div>
-    <div id='holder' >
-      <h2>Example-SMART-App</h2>
-
-      <h2>Patient Resource</h2>
-      <table>
-        <tr>
-          <th>First Name:</th>
-          <td id='fname'></td>
-        </tr>
-        <tr>
-          <th>Last Name:</th>
-          <td id='lname'></td>
-        </tr>
-        <tr>
-          <th>Gender:</th>
-          <td id='gender'></td>
-        </tr>
-        <tr>
-          <th>Date of Birth:</th>
-          <td id='birthdate'></td>
-        </tr>
-      </table>
-      <h2>Observation Resource</h2>
-      <table>
-        <tr>
-          <th>Height:</th>
-          <td id='height'></td>
-        </tr>
-        <tr>
-          <th>Systolic Blood Pressure:</th>
-          <td id='systolicbp'></td>
-
-        </tr>
-        <tr>
-          <th>Diastolic Blood Pressure:</th>
-          <td id='diastolicbp'></td>
-        </tr>
-        <tr>
-          <th>LDL:</th>
-          <td id='ldl'></td>
-        </tr>
-        <tr>
-          <th>HDL:</th>
-          <td id='hdl'></td>
-        </tr>
-      </table>
-    </div>
-    <!-- Required JS files to enable this page to embed within an MPage -->
-    <!--
-      Temporarily disable cerner-smart-embeddable-lib
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
-      <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
-    -->
-
-    <!-- Application-level javascript-->
-    <script src='./src/js/example-smart-app.js'></script>
-
-    <!-- FHIR Client JS Library -->
-    <script src='https://rawgithub.com/smart-on-fhir/client-js/master/dist/fhir-client.js'></script>
-
-    <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
-    <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-      extractData().then(
-        //Display Patient Demographics and Observations if extractData was success
-        function(p) {
-          drawVisualization(p);
-        },
-
-        //Display 'Failed to call FHIR Service' if extractData failed
-        function() {
-          $('#loading').hide();
-          $('#errors').html('<p> Failed to call FHIR Service </p>');
+    <h1>Medications for <span id="name"></span></h1>
+    <ul id="med_list"></ul>
+    <script type="text/javascript">
+        function getPatientName (pt) {
+            if (pt.name) {
+                var names = pt.name.map(function(name) {
+                    return name.given.join(" ") + " " + name.family.join(" ");
+                });
+                return names.join(" / ")
+            } else {
+                return "anonymous";
+            }
         }
-      );
+
+        function getMedicationName (medCodings) {
+            var coding = medCodings.find(function(c){
+                return c.system == "http://www.nlm.nih.gov/research/umls/rxnorm";
+            });
+
+            return coding && coding.display || "Unnamed Medication(TM)"
+        }
+
+        function displayPatient (pt) {
+            document.getElementById('name').innerHTML = getPatientName(pt);
+        }
+
+        var med_list = document.getElementById('med_list');
+
+        function displayMedication (medCodings) {
+            med_list.innerHTML += "<li> " + getMedicationName(medCodings) + "</li>";
+        }
+
+        FHIR.oauth2.ready(function(smart){
+            smart.patient.read().then(function(pt) {
+                displayPatient (pt);
+            });
+            smart.patient.api.fetchAllWithReferences({type: "MedicationOrder"},["MedicationOrder.medicationReference"]).then(function(results, refs) {
+               results.forEach(function(prescription){
+                    if (prescription.medicationCodeableConcept) {
+                        displayMedication(prescription.medicationCodeableConcept.coding);
+                    } else if (prescription.medicationReference) {
+                        var med = refs(prescription, prescription.medicationReference);
+                        displayMedication(med && med.code.coding || []);
+                    }
+               });
+            });
+        });
     </script>
   </body>
 </html>
