--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+    <!--
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
-
+    -->
     <title>Example-SMART-App</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
       });
     </script>
     -->
-
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'not-necessary-here',
