--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'CLIENT_ID_HERE',
+        'client_id': '34f2734f-dc1f-4bfd-b9a4-ebf08e9c28e5',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
